--- a/site/_scss/blocks/_scaffold.scss
+++ b/site/_scss/blocks/_scaffold.scss
@@ -6,7 +6,7 @@
   display: grid;
   height: 100vh;
   grid-template-columns: auto 1fr;
-  grid-template-rows: min-content 1fr auto;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas:
     'header header'
     'sidebar main'
